# turkish-literature-calendar

./: .gitignore  README.md  package.json
public/: index.html
server/: db.sqlite3  pyproject.toml
server/api/: serializers.py  urls.py  views.py
server/core/: admin.py  models.py
server/core/migrations/: 0001_initial.py  0002_specialday_delete_day.py  0003_specialday_year.py
server/server/: settings.py  urls.py
src/: App.css  App.js  calendar-utilities.js  index.css  specialDays.json
src/components/: Weeks.jsx
src/components/InfoBox/: InfoBox.jsx  infobox.css
